<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.ppp.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/bgimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/topimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_top_bg_login"
        app:layout_constraintLeft_toLeftOf="@+id/bgimage"
        app:layout_constraintRight_toRightOf="@+id/bgimage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="26dp"
        android:background="@mipmap/ic_return"
        android:enabled="false"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loading_fram_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/anim_loading_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/ic_word_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:src="@mipmap/ic_word_icon"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topimage" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:textColorHint ="@color/grey_89"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_word_icon" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/dimen_200"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/prompt_password"
        android:textColorHint ="@color/grey_89"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/userline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:src="@mipmap/ic_login_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <ImageView
        android:id="@+id/passwordline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:src="@mipmap/ic_login_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <ImageView
        android:id="@+id/usericon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="@dimen/dimen_170"
        android:src="@mipmap/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <ImageView
        android:id="@+id/passwordicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="@dimen/dimen_170"
        android:src="@mipmap/ic_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <CheckBox
        android:id="@+id/check_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_30"
        android:button="@mipmap/ic_checkbox_select"
        android:textSize="15sp"
        android:text="@string/auto_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordicon" />

    <CheckBox
        android:id="@+id/check_remeber_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_80"
        android:layout_marginTop="@dimen/dimen_30"
        android:button="@mipmap/ic_checkbox_select"
        android:textSize="15sp"
        android:text="@string/remeber_pwd"
        app:layout_constraintLeft_toRightOf="@+id/check_auto_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordicon" />

    <ImageButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@mipmap/al_btn_login"
        android:enabled="false"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_remeber_pwd" />

    <TextView
        android:id="@+id/login_btn_tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:layout_marginTop="@dimen/dimen_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_remeber_pwd"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/btns"
        app:layout_constraintEnd_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/login_sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:clickable="true"
            android:enabled="true"
            android:background="@null"
            android:backgroundTint="#FFFFFFFF"
            android:text="@string/action_sign_in"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btns_tit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:text="|"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <Button
            android:id="@+id/login_forget_pwd_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:enabled="true"
            android:clickable="true"
            android:background="@null"
            android:backgroundTint="#FFFFFFFF"
            android:text="@string/action_forget_password"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>